--- a/src/app/employees/list-employees/list-employees.component.html
+++ b/src/app/employees/list-employees/list-employees.component.html
@@ -9,10 +9,11 @@
                     <div class="media d-flex">
                       <div class="align-self-center">
                         <div class="media">
-                            <img class="mr-3 rounded-circle" src="https://cdn0.iconfinder.com/data/icons/user-pictures/100/male-512.png" alt="Generic placeholder image" style="max-width:100px">
+                            
                             <div class="media-body">
-                              <h6 class="my-0 text-black d-block">{{employee.firstName}} {{employee.secondName}}</h6>
-                               <small>{{employee.position}}</small>
+                              <h6 class="my-0 d-block">{{employee.firstName}} {{employee.secondName}}</h6>
+                               <small>Position:{{employee.position}}</small><br>
+                               <small>Age:{{employee.age}}</small>
                             </div>
                             </div>
                       </div>
