--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Code+Latin:wght@200;500&display=swap');
+body{font-family: 'M PLUS Code Latin', sans-serif;}
