--- a/src/app/employees/add-employee/add-employee.component.html
+++ b/src/app/employees/add-employee/add-employee.component.html
@@ -1,3 +1,4 @@
+<h1>Add employee</h1>
 <form [formGroup]="addEmmployeeForm" (submit)="createEmployee()" class="was-validated">
     <div class="form-row">
       <div class="form-group col-md-6">
