--- a/src/app/employees/edit-employee/edit-employee.component.html
+++ b/src/app/employees/edit-employee/edit-employee.component.html
@@ -1,4 +1,4 @@
-
+<h1>Edit employee</h1>
 <div *ngIf="dataLoaded">
     <form [formGroup]="editEmployeeForm" (submit)="updateEmployee()" class="was-validated">
     <div class="form-row">
