--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
-<app-footer style="width: 100%; position: absolute; bottom: 0;"></app-footer>
+<app-footer ></app-footer>
