--- a/src/app/employees/list-employees/list-employees.component.html
+++ b/src/app/employees/list-employees/list-employees.component.html
@@ -1,35 +1,27 @@
 <h1>Home</h1>
-<ul>
-    <li *ngFor="let employee of listEmployees">
-       <!--<a [routerLink]="['view',employee._id]">-->
-        <div class="container">
+<h6>Loaded elements {{total}}</h6>
+<table class="table table-striped">
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">First name</th>
+      <th scope="col">Second name</th>
+      <th scope="col">Job profesion</th>
+      <th scope="col">Age</th>
+      <th scope="col">Operations</th>
+    </tr>
+  </thead>
+  <tbody *ngFor="let employee of listEmployees">
+    <tr>
+      <th scope="row">{{employee.firstName}}</th>
+      <td>{{employee.secondName}}</td>
+      <td>{{employee.position}}</td>
+      <td>{{employee.age}}</td>
+      <td><div class="optBtn">
+        <a [routerLink]="['edit',employee._id]" class=" btn btn-info"><i class="fas fa-pencil-alt"></i></a>
+        <a [routerLink]="['delete',employee._id]" class="btn btn-danger" ><i class="fas fa-trash"></i></a>
+      </div>
+    </td>
+    </tr>
+</tbody>
 
-            <div style="min-width: 250px;"class="card">
-                <div class="card-content">
-                  <div class="card-body">
-                    <div class="media d-flex">
-                      <div class="align-self-center">
-                        <div class="media">
-                            
-                            <div class="media-body">
-                              <h6 class="my-0 d-block">{{employee.firstName}} {{employee.secondName}}</h6>
-                               <small>Position:{{employee.position}}</small><br>
-                               <small>Age:{{employee.age}}</small>
-                            </div>
-                            </div>
-                      </div>
-                      
-                    </div>
-                    <div class="optBtn">
-                        <a [routerLink]="['edit',employee._id]" class=" btn btn-info"><i class="fas fa-pencil-alt"></i></a>
-                        <a [routerLink]="['delete',employee._id]" class="btn btn-danger" ><i class="fas fa-trash"></i></a></div>
-                    </div>
-                </div>
-              </div>
-            
-                
-            
-        </div>
-       <!-- </a>-->
-    </li>
-</ul>
+
